# SLR_Parser

./: CMakeLists.txt  dfdf.txt  popa.txt  readme.md
source/: command_line_args.hpp  main.cpp
source/include/lexer/: crazy_lexer.hpp  token.hpp
source/include/syntaxer/: dfa_builder.hpp  grammar.hpp  grammar_worker.hpp  parser.hpp
source/src/lexer/: crazy_lexer.cpp  lexer.cpp  lexer.l
source/src/syntaxer/: dfa_builder.cpp  grammar.cpp  grammar_worker.cpp  parser.cpp
tests/: runtest.py
tests/invalid/grammatical/input/: 000005.txt  000006.txt  000007.txt  000008.txt
tests/invalid/grammatical/output/: 000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt
tests/invalid/lexical/input/: 000001.txt  000003.txt
tests/invalid/lexical/output/: 000001.txt  000002.txt  000003.txt  000004.txt  000005.txt
tests/valid/input/: 000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt
tests/valid/output/: 000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt
